syntax = "proto3";

package cn.blazeh.achat.common.proto;

option java_package = "cn.blazeh.achat.common.proto";
option java_outer_classname = "MessageProto";

enum AChatType {
  UNDEFINED = 0;      // 未定义类型，不应使用
  HEARTBEAT = 1;      // 心跳包
  AUTH = 2;           // 用户认证
  CHAT = 3;           // 聊天消息
  SEND = 4;           // 客户端消息发送状态
}

message AChatHeartbeat {}

message AChatAuth {
  bool flag = 1;        // 是否注册或是否登录成功
  string first = 2;     // 用户名或登录信息
  string second = 3;    // 密码或Session ID
}

enum MessageType {
  TEXT = 0;
}

message AChatChat {
  int64 messageId = 1;    // 消息唯一ID
  int64 timestamp = 2;    // 毫秒级时间戳
  string senderId = 3;    // 发送者ID
  string receiverId = 4;  // 接收者ID
  MessageType type = 5;   // 消息类型
  string content = 6;     // 消息内容
}

message AChatSend {
  bool success = 1;       // 是否发送成功
  int64 orgMsgId = 2;     // 原客户端消息ID
  int64 newMsgId = 3;     // 新服务端消息ID
  string error = 4;       // 错误信息
}

message AChatEnvelope {
  AChatType type = 1;     // 消息类型
  int64 timestamp = 2;    // 毫秒级时间戳
  string sessionId = 3;   // Session ID
  oneof payload {
    AChatHeartbeat heartbeat = 4;
    AChatAuth auth = 5;
    AChatChat chat = 6;
    AChatSend send = 7;
  }
}